--- a/_data/cv/education.yaml
+++ b/_data/cv/education.yaml
@@ -26,7 +26,7 @@
   degree: Applied Mathematics
   year: 2018
   year_end: "Present"
-  note: In progress
+  note: 2023
   advisors:
     - name  : "Dr. Philip Loewen"
       url   : "https://secure.math.ubc.ca/~loew/"
