--- a/_data/cv/awards.yaml
+++ b/_data/cv/awards.yaml
@@ -1,6 +1,5 @@
 - name: Graduate Research Award
   year: 2022
-  year_end: present
   degree: Doctoral
   amount: CAN $2,500 
   institution: The University of British Columbia
@@ -8,7 +7,7 @@
 
 - name: Alexander Graham Bell Canada Graduate Scholarship
   year: 2020
-  year_end: present
+  year_end: 2023
   degree: Doctoral
   amount: CAN $35,000 per year
   institution: The University of British Columbia
