--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -231,6 +231,7 @@ references:
   citation-key: lawrence2023DeepReinforcement
   genre: Text
   year: 2023
+  publisher: The University of British Columbia
   title: Deep reinforcement learning agents for industrial control system design
   type: thesis
   URL: https://open.library.ubc.ca/collections/24/items/1.0430547
