--- a/_data/cv/awards.yaml
+++ b/_data/cv/awards.yaml
@@ -15,7 +15,7 @@
 
 - name: Four Year Doctoral Fellowship
   year: 2018
-  year_end: present
+  year_end: 2023
   degree: Doctoral
   amount: Supplemental funding
   institution: The University of British Columbia
