--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -301,9 +301,9 @@ references:
     Machine learning techniques for industrial sensing and control: A survey and practical perspective
   title-short:
   type: article-journal
-  URL:
+  URL: https://doi.org/10.1016/j.conengprac.2024.105841
   volume:
-  note: In press
+  note:
 
 - id: lawrence2024Stabilizing
   accessed:
