--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/nathan-lawrence-ab88a8142/"
+  linkedin         : "nathan-lawrence-ab88a8142"
   orcid            : "https://orcid.org/0000-0002-7147-0048"
   pinterest        :
   soundcloud       :
