--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -578,11 +578,10 @@ references:
     - family: Mesbah
       given: Ali
   citation-key: lawrence2025Viewlearning
+  container-title: arXiv preprint
   DOI: 10.48550/arXiv.2502.06996
   issued:
     - year: 2025
-      month: 2
-      day: 10
   number: arXiv:2502.06996
   publisher: arXiv
   source: arXiv.org
@@ -607,11 +606,10 @@ references:
     - family: Mesbah
       given: Ali
   citation-key: banker2025LocalGlobalLearning
+  container-title: American Control Conference
   DOI: 10.48550/arXiv.2503.13289
   issued:
     - year: 2025
-      month: 3
-      day: 17
   number: arXiv:2503.13289
   publisher: arXiv
   source: arXiv.org
@@ -637,11 +635,10 @@ references:
     - family: Mesbah
       given: Ali
   citation-key: lawrence2025MPCriticplugandplay
+  container-title: arXiv preprint
   DOI: 10.48550/arXiv.2504.01086
   issued:
     - year: 2025
-      month: 4
-      day: 1
   number: arXiv:2504.01086
   publisher: arXiv
   source: arXiv.org
