--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -552,8 +552,7 @@ references:
   DOI: 10.1109/IROS58592.2024.10802721
   event-place: Abu Dhabi, United Arab Emirates
   event-title: IROS
-  issued:
-    - year: 2024
+  year: 2024
   page: 11857–11863
   publisher: IEEE
   publisher-place: Abu Dhabi, United Arab Emirates
