--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -528,7 +528,7 @@ references:
   URL: http://arxiv.org/abs/2304.13223
 
 - id: wang2024guiding
-  archive: arXiv:2410.16821
+  archive: https://arxiv.org/abs/2410.16821
   author:
     - family: Wang
       given: Shuyuan
@@ -558,13 +558,14 @@ references:
   publisher-place: Abu Dhabi, United Arab Emirates
   title: Guiding reinforcement learning with incomplete system dynamics
   type: paper-conference
+  url: https://arxiv.org/abs/2410.16821
   
 - id: lawrence2025Viewlearning
   accessed:
     - year: 2025
       month: 3
       day: 11
-  archive: 10.48550/arXiv.2502.06996
+  archive: https://arxiv.org/abs/2502.06996
   author:
     - family: Lawrence
       given: Nathan P.
@@ -596,7 +597,7 @@ references:
     - year: 2025
       month: 3
       day: 21
-  archive: 10.48550/arXiv.2503.13289
+  archive: https://arxiv.org/abs/2503.13289
   author:
     - family: Banker
       given: Thomas
@@ -625,7 +626,7 @@ references:
     - year: 2025
       month: 4
       day: 3
-  archive: 10.48550/arXiv.2504.01086
+  archive: http://arxiv.org/abs/2504.01086
   author:
     - family: Lawrence
       given: Nathan P.
